--- a/.github/workflows/environment-check.yml
+++ b/.github/workflows/environment-check.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Environment Check
 
 # Controls when the workflow will run
 on:
@@ -13,6 +13,7 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    environment: releases
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
